@@ -16,18 +16,13 @@ import static org.openhab.binding.hue.internal.HueBindingConstants.*;
 import static org.openhab.core.thing.Thing.*;
 
 import java.math.BigDecimal;
-import java.util.AbstractMap.SimpleEntry;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
@@ -36,6 +31,9 @@ import org.openhab.binding.hue.internal.State;
 import org.openhab.binding.hue.internal.State.ColorMode;
 import org.openhab.binding.hue.internal.StateUpdate;
 import org.openhab.binding.hue.internal.action.LightActions;
+import org.openhab.binding.hue.internal.dto.Capabilities;
+import org.openhab.binding.hue.internal.dto.ColorTemperature;
+import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.HSBType;
 import org.openhab.core.library.types.IncreaseDecreaseType;
 import org.openhab.core.library.types.OnOffType;
@@ -52,6 +50,8 @@ import org.openhab.core.thing.binding.BaseThingHandler;
 import org.openhab.core.thing.binding.ThingHandler;
 import org.openhab.core.thing.binding.ThingHandlerService;
 import org.openhab.core.types.Command;
+import org.openhab.core.types.StateDescription;
+import org.openhab.core.types.StateDescriptionFragmentBuilder;
 import org.openhab.core.types.UnDefType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -77,24 +77,20 @@ import org.slf4j.LoggerFactory;
 @NonNullByDefault
 public class HueLightHandler extends BaseThingHandler implements LightStatusListener {
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Stream.of(THING_TYPE_COLOR_LIGHT,
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_COLOR_LIGHT,
             THING_TYPE_COLOR_TEMPERATURE_LIGHT, THING_TYPE_DIMMABLE_LIGHT, THING_TYPE_EXTENDED_COLOR_LIGHT,
-            THING_TYPE_ON_OFF_LIGHT, THING_TYPE_ON_OFF_PLUG, THING_TYPE_DIMMABLE_PLUG).collect(Collectors.toSet());
+            THING_TYPE_ON_OFF_LIGHT, THING_TYPE_ON_OFF_PLUG, THING_TYPE_DIMMABLE_PLUG);
 
-    // @formatter:off
-    private static final Map<String, List<String>> VENDOR_MODEL_MAP = Stream.of(
-            new SimpleEntry<>("Philips",
-                    Arrays.asList("LCT001", "LCT002", "LCT003", "LCT007", "LLC001", "LLC006", "LLC007", "LLC010",
-                            "LLC011", "LLC012", "LLC013", "LLC020", "LST001", "LST002", "LWB004", "LWB006", "LWB007",
-                            "LWL001")),
-            new SimpleEntry<>("OSRAM",
-                    Arrays.asList("Classic_A60_RGBW", "PAR16_50_TW", "Surface_Light_TW", "Plug_01")))
-        .collect(Collectors.toMap((e) -> e.getKey(), (e) -> e.getValue()));
-    // @formatter:on
+    private static final Map<String, List<String>> VENDOR_MODEL_MAP = Map.of( //
+            "Philips", List.of("LCT001", "LCT002", "LCT003", "LCT007", "LLC001", "LLC006", "LLC007", "LLC010", //
+                    "LLC011", "LLC012", "LLC013", "LLC020", "LST001", "LST002", "LWB004", "LWB006", "LWB007", //
+                    "LWL001"),
+            "OSRAM", List.of("Classic_A60_RGBW", "PAR16_50_TW", "Surface_Light_TW", "Plug_01"));
 
     private static final String OSRAM_PAR16_50_TW_MODEL_ID = "PAR16_50_TW";
 
     private final Logger logger = LoggerFactory.getLogger(HueLightHandler.class);
+    private final HueStateDescriptionOptionProvider stateDescriptionOptionProvider;
 
     private @NonNullByDefault({}) String lightId;
 
@@ -108,14 +104,17 @@ public class HueLightHandler extends BaseThingHandler implements LightStatusList
     private boolean isOsramPar16 = false;
 
     private boolean propertiesInitializedSuccessfully = false;
+    private boolean capabilitiesInitializedSuccessfully = false;
+    private ColorTemperature colorTemperatureCapabilties = new ColorTemperature();
     private long defaultFadeTime = 400;
 
     private @Nullable HueClient hueClient;
 
     private @Nullable ScheduledFuture<?> scheduledFuture;
 
-    public HueLightHandler(Thing hueLight) {
+    public HueLightHandler(Thing hueLight, HueStateDescriptionOptionProvider stateDescriptionOptionProvider) {
         super(hueLight);
+        this.stateDescriptionOptionProvider = stateDescriptionOptionProvider;
     }
 
     @Override
@@ -145,7 +144,9 @@ public class HueLightHandler extends BaseThingHandler implements LightStatusList
             HueClient bridgeHandler = getHueClient();
             if (bridgeHandler != null) {
                 if (bridgeStatus == ThingStatus.ONLINE) {
-                    initializeProperties(bridgeHandler.getLightById(lightId));
+                    FullLight fullLight = bridgeHandler.getLightById(lightId);
+                    initializeProperties(fullLight);
+                    initializeCapabilities(fullLight);
                     updateStatus(ThingStatus.ONLINE);
                 } else {
                     updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.BRIDGE_OFFLINE);
@@ -184,6 +185,33 @@ public class HueLightHandler extends BaseThingHandler implements LightStatusList
             updateProperties(properties);
             isOsramPar16 = OSRAM_PAR16_50_TW_MODEL_ID.equals(modelId);
             propertiesInitializedSuccessfully = true;
+        }
+    }
+
+    private void initializeCapabilities(@Nullable FullLight fullLight) {
+        if (!capabilitiesInitializedSuccessfully && fullLight != null) {
+            Capabilities capabilities = fullLight.capabilities;
+            if (capabilities != null) {
+                ColorTemperature ct = capabilities.control.ct;
+                if (ct != null) {
+                    colorTemperatureCapabilties = ct;
+
+                    // minimum and maximum are inverted due to mired/Kelvin conversion!
+                    StateDescription stateDescription = StateDescriptionFragmentBuilder.create()
+                            .withMinimum(new BigDecimal(LightStateConverter.miredToKelvin(ct.max))) //
+                            .withMaximum(new BigDecimal(LightStateConverter.miredToKelvin(ct.min))) //
+                            .withStep(new BigDecimal(100)) //
+                            .withPattern("%.0f K") //
+                            .build().toStateDescription();
+                    if (stateDescription != null) {
+                        stateDescriptionOptionProvider.setDescription(
+                                new ChannelUID(thing.getUID(), CHANNEL_COLORTEMPERATURE_ABS), stateDescription);
+                    } else {
+                        logger.warn("Failed to create state description in thing {}", thing.getUID());
+                    }
+                }
+            }
+            capabilitiesInitializedSuccessfully = true;
         }
     }
 
@@ -235,7 +263,8 @@ public class HueLightHandler extends BaseThingHandler implements LightStatusList
         switch (channel) {
             case CHANNEL_COLORTEMPERATURE:
                 if (command instanceof PercentType) {
-                    lightState = LightStateConverter.toColorTemperatureLightState((PercentType) command);
+                    lightState = LightStateConverter.toColorTemperatureLightStateFromPercentType((PercentType) command,
+                            colorTemperatureCapabilties);
                     lightState.setTransitionTime(fadeTime);
                 } else if (command instanceof OnOffType) {
                     lightState = LightStateConverter.toOnOffLightState((OnOffType) command);
@@ -248,7 +277,13 @@ public class HueLightHandler extends BaseThingHandler implements LightStatusList
                         lightState.setTransitionTime(fadeTime);
                     }
                 }
-
+                break;
+            case CHANNEL_COLORTEMPERATURE_ABS:
+                if (command instanceof DecimalType) {
+                    lightState = LightStateConverter.toColorTemperatureLightState((DecimalType) command,
+                            colorTemperatureCapabilties);
+                    lightState.setTransitionTime(fadeTime);
+                }
                 break;
             case CHANNEL_BRIGHTNESS:
                 if (command instanceof PercentType) {
@@ -269,7 +304,7 @@ public class HueLightHandler extends BaseThingHandler implements LightStatusList
                 if (lightState != null && lastColorTemp != null) {
                     // make sure that the light also has the latest color temp
                     // this might not have been yet set in the light, if it was off
-                    lightState.setColorTemperature(lastColorTemp);
+                    lightState.setColorTemperature(lastColorTemp, colorTemperatureCapabilties);
                     lightState.setTransitionTime(fadeTime);
                 }
                 break;
@@ -285,7 +320,7 @@ public class HueLightHandler extends BaseThingHandler implements LightStatusList
                 if (lightState != null && lastColorTemp != null) {
                     // make sure that the light also has the latest color temp
                     // this might not have been yet set in the light, if it was off
-                    lightState.setColorTemperature(lastColorTemp);
+                    lightState.setColorTemperature(lastColorTemp, colorTemperatureCapabilties);
                     lightState.setTransitionTime(fadeTime);
                 }
                 break;
@@ -365,8 +400,9 @@ public class HueLightHandler extends BaseThingHandler implements LightStatusList
         StateUpdate stateUpdate = null;
         Integer currentColorTemp = getCurrentColorTemp(light.getState());
         if (currentColorTemp != null) {
-            int newColorTemp = LightStateConverter.toAdjustedColorTemp(command, currentColorTemp);
-            stateUpdate = new StateUpdate().setColorTemperature(newColorTemp);
+            int newColorTemp = LightStateConverter.toAdjustedColorTemp(command, currentColorTemp,
+                    colorTemperatureCapabilties);
+            stateUpdate = new StateUpdate().setColorTemperature(newColorTemp, colorTemperatureCapabilties);
         }
         return stateUpdate;
     }
@@ -482,29 +518,27 @@ public class HueLightHandler extends BaseThingHandler implements LightStatusList
 
         HSBType hsbType = LightStateConverter.toHSBType(state);
         if (!state.isOn()) {
-            hsbType = new HSBType(hsbType.getHue(), hsbType.getSaturation(), new PercentType(0));
+            hsbType = new HSBType(hsbType.getHue(), hsbType.getSaturation(), PercentType.ZERO);
         }
         updateState(CHANNEL_COLOR, hsbType);
 
         ColorMode colorMode = state.getColorMode();
         if (ColorMode.CT.equals(colorMode)) {
-            PercentType colorTempPercentType = LightStateConverter.toColorTemperaturePercentType(state);
-            updateState(CHANNEL_COLORTEMPERATURE, colorTempPercentType);
+            updateState(CHANNEL_COLORTEMPERATURE,
+                    LightStateConverter.toColorTemperaturePercentType(state, colorTemperatureCapabilties));
+            updateState(CHANNEL_COLORTEMPERATURE_ABS, LightStateConverter.toColorTemperature(state));
         } else {
-            updateState(CHANNEL_COLORTEMPERATURE, UnDefType.NULL);
+            updateState(CHANNEL_COLORTEMPERATURE, UnDefType.UNDEF);
+            updateState(CHANNEL_COLORTEMPERATURE_ABS, UnDefType.UNDEF);
         }
 
         PercentType brightnessPercentType = LightStateConverter.toBrightnessPercentType(state);
         if (!state.isOn()) {
-            brightnessPercentType = new PercentType(0);
+            brightnessPercentType = PercentType.ZERO;
         }
         updateState(CHANNEL_BRIGHTNESS, brightnessPercentType);
 
-        if (state.isOn()) {
-            updateState(CHANNEL_SWITCH, OnOffType.ON);
-        } else {
-            updateState(CHANNEL_SWITCH, OnOffType.OFF);
-        }
+        updateState(CHANNEL_SWITCH, OnOffType.from(state.isOn()));
 
         StringType stringType = LightStateConverter.toAlertStringType(state);
         if (!"NULL".equals(stringType.toString())) {
@@ -609,7 +643,7 @@ public class HueLightHandler extends BaseThingHandler implements LightStatusList
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(LightActions.class);
+        return List.of(LightActions.class);
     }
 
     @Override
